# PhotonEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Engine/: CMakeLists.txt  Photon.srctrlprj  convert-utf8.py
Engine/Src/Editor/: CMakeLists.txt  CmdExecutor.cpp  CmdExecutor.h  Editor.cpp  Editor.h  EditorGlobalContext.cpp  EditorGlobalContext.h  EditorUI.cpp  EditorUI.h  PaintItCaller.cpp  PaintItCaller.h  main.cpp
Engine/Src/Runtime/: CMakeLists.txt  Define.h  Engine.cpp  Engine.h  Macro.h
Engine/Src/Runtime/Core/Log/: LogManager.cpp  LogManager.h
Engine/Src/Runtime/Core/Math/: MathFunction.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector2i.cpp  Vector2i.h  Vector3.cpp  Vector3.h  Vector3i.cpp  Vector3i.h  Vector4.cpp  Vector4.h  Vector4i.cpp  Vector4i.h
Engine/Src/Runtime/Function/Event/: Event.cpp  Event.h  EventHeaders.h
Engine/Src/Runtime/Function/Event/KeyEvent/: KeyCharEvent.h  KeyDownEvent.h  KeyEvent.cpp  KeyEvent.h  KeyUpEvent.h
Engine/Src/Runtime/Function/Event/MouseEvent/: MouseButtonDown.h  MouseButtonUp.h  MouseDoubleClick.h  MouseEvent.cpp  MouseEvent.h  MouseMove.h  MouseWheel.h
Engine/Src/Runtime/Function/Event/WindowEvent/: WindowCreateEvent.h  WindowDestroyEvent.h  WindowEvent.cpp  WindowEvent.h  WindowMoveEvent.h  WindowResizeEvent.h
Engine/Src/Runtime/Function/Global/: RuntimeGlobalContext.cpp  RuntimeGlobalContext.h
Engine/Src/Runtime/Function/Input/: InputSystem.cpp  InputSystem.h
Engine/Src/Runtime/Function/Render/: CascadedShadowCamera.cpp  CascadedShadowCamera.h  CascadedShadowManager.cpp  CascadedShadowManager.h  CascadedShadowMaps.cpp  CascadedShadowMaps.h  EGFrameContext.h  ForwardRenderPipeline.cpp  ForwardRenderPipeline.h  GameObject.cpp  GameObject.h  GeometryGenerator.cpp  GeometryGenerator.h  Light.h  PassBlackboard.h  RHI.cpp  RHI.h  RenderCamera.cpp  RenderCamera.h  RenderGuidAllocator.h  RenderItem.h  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  RenderResourceData.h  RenderScene.cpp  RenderScene.h  RenderSystem.cpp  RenderSystem.h  RenderType.h  RenderTypes.h  ResourceHandle.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  ResourceTypes.h  Shader.h  WindowSystem.cpp  WindowSystem.h
Engine/Src/Runtime/Function/Render/DX12RHI/: CommandContextManager.cpp  CommandContextManager.h  DX12CommandContext.cpp  DX12CommandContext.h  DX12Define.cpp  DX12Define.h  DX12RHI.cpp  DX12RHI.h  FrameSyncSystem.cpp  FrameSyncSystem.h  GpuResource.h  GpuResourceManager.cpp  GpuResourceManager.h  ViewDesc.h  ViewKey.h  WICTextureLoader12.cpp  d3dx12.h
Engine/Src/Runtime/Function/Render/Importers/: MeshImporter.h  ShaderImporter.h
Engine/Src/Runtime/Function/Render/RenderObject/: AssetMeta.h  Bounds.cpp  Bounds.h  GeometryGenerator.h  ImporterSettings.h  Material.cpp  Material.h  MaterialAsset.h  MaterialCollection.cpp  MaterialCollection.h  MaterialRenderState.h  Mesh.cpp  Mesh.h  MeshAsset.h  MeshCollection.cpp  MeshCollection.h  Model.cpp  Model.h  ModelAsset.h  Ray.cpp  Ray.h  RenderItem.cpp  RenderItem.h  RenderMeshCollection.cpp  RenderMeshCollection.h  TextureAsset.h  TextureCollection.cpp  TextureCollection.h
Engine/Src/Runtime/Function/Render/RenderPass/: MainCameraPass.cpp  MainCameraPass.h  PassBlackboard.h  PassContext.h  PassDrawItem.h  PassSort.h  PreprocessPass.cpp  PreprocessPass.h  SubPassHelpers.h
Engine/Src/Runtime/Function/Render/RenderResourceData/: ForwardPipelineRenderResourceData.h  MainPassRenderResourceData.h
Engine/Src/Runtime/Function/Render/Resource/: MaterialGpuData.h  (+2 more)
Engine/Src/Runtime/Function/UI/: ImGuiSystem.cpp  ImGuiSystem.h  WindowUI.h
Engine/Src/Runtime/Function/Util/: GameTimer.cpp  GameTimer.h  Md5.cpp  Md5.h  RenderUtil.cpp  RenderUtil.h  ResourceSlotCollection.h  WindowUtil.cpp  WindowUtil.h
Engine/Src/Runtime/Platform/FileSystem/: FileSystem.cpp  FileSystem.h
Engine/Src/Runtime/Resource/: DXResourceHeader.h  LinearAllocator.h  ResourceType.cpp  ResourceType.h
Engine/Src/Runtime/Resource/Texture/: Buffer.cpp  Buffer.h  Cubemap.cpp  Cubemap.h  Texture2D.cpp  Texture2D.h  Texture2DArray.cpp  Texture2DArray.h
Engine/Src/Runtime/Test/: SandBox.cpp  SandBox.h
(+136 files in other folders)
